fix image contrast

--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body {
 }
 header {
     font-size: 22px;
-    font-weight: 600;
+    font-weight: 500;
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
@@ -77,7 +77,7 @@ li + li {
     border-radius: 12px;
     background-color: #ffffff;
     color:hsl(209, 100%, 38%);
-    font-weight: 600;
+    font-weight: 500;
     justify-content: center;
 }
 @media only screen and (max-width: 750px) {
@@ -94,7 +94,7 @@ a:hover {
 }
 .image-mask {
     position: absolute;
-    background-color: hsla(209, 15%, 10%, 0.65);
+    background-color: hsla(209, 15%, 10%, 0.7);
     top:0;
     right:0;
     bottom:0;
@@ -126,9 +126,9 @@ a:hover {
     }
 }
 h1 {
-    font-weight: 600;
+    font-weight: 500;
     font-size: 42px;
-    color: hsl(255, 100, 100);
+    color: hsl(0, 0%, 100%);
 }
 @media only screen and (max-width: 750px) {
     h1 {
@@ -141,7 +141,7 @@ h1 {
     margin-top: 50px;
     background-color: hsl(209, 100%, 38%);
     padding: 16px 20px;
-    font-weight: 700;
+    font-weight: 600;
     border-radius: 12px;
     font-size: 24px;
     border: 4px solid #ffffff;
@@ -164,7 +164,6 @@ main {
     column-gap: 15%;
     row-gap: 50px;
     padding:48px 48px;
-    font-weight: 500;
 }
 @media only screen and (max-width: 750px) {
     .grid-container {
@@ -175,7 +174,7 @@ main {
 
 h2 {
     font-size: 30px;
-    font-weight: 600;
+    font-weight: 500;
     margin-top:1em;
     grid-column: 1 / span 1;
     grid-row: 1 / span 1;
@@ -234,7 +233,7 @@ h2 {
 }
 
 .feature {
-    font-weight: 700;
+    font-weight: 600;
     font-size: 24px;
 }
 .grid-container  p {
@@ -248,7 +247,7 @@ h2 {
     background-color: #ffffff;
     color: hsl(209, 100%, 38%);
     text-transform: uppercase;
-    font-weight: 700;
+    font-weight: 600;
     font-size: 18px;
     box-shadow: 8px 4px 4px black;
 }
